# Face-Recognition-Attendance-Management-System

./: README.md  index.php  package.json  passwords.txt  pnpm-lock.yaml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  attendance.py  auth.py  students.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  attendance.py  classroom.py  student.py  subject.py  timetable.py  user.py
backend/app/schemas/: attendance.py  auth.py  student.py  user.py
database/: attendance-db.sql  database_connection.php
face-service/: pyproject.toml
face-service/app/: __init__.py  main.py
face-service/app/api/: __init__.py  routes.py
face-service/app/core/: config.py
face-service/app/services/: recognizer.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: axios.ts
frontend/src/components/: Navbar.tsx
frontend/src/pages/: AdminDashboard.tsx  CentralPanel.tsx  Login.tsx  StudentDashboard.tsx
resources/assets/css/: admin_styles.css  login_styles.css  styles.css
resources/assets/javascript/: active_link.js  addCourse.js  addLecture.js  admin_functions.js  confirmation.js  delete_request.js  script.js  select.js
resources/lib/: php_functions.php
resources/pages/: 404.php  login.php
resources/pages/administrator/: create-venue.php  handle_delete.php  home.php  manage-course.php  manage-lecture.php  manage-students.php
resources/pages/lecture/: attendanceUpload.php  download-record.php  handle_attendance.php  home.php  manageFolder.php  studentTable.php  (+2 more)
(+5 files in other folders)
