[tool.poetry]
name = "face-recognition-service"
version = "0.1.0"
description = "Face recognition microservice"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
face-recognition = "^1.3.0"
opencv-python-headless = "^4.10.0.82"
numpy = "^1.26.4"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.2"
pydantic-settings = "^2.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

